--- a/index.html
+++ b/index.html
@@ -18,14 +18,38 @@
             <div class="myswiper">
                 <div class="swiper-container">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
-                        <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
-                        <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"> </div>
-                        <div class="swiper-slide"><img src="img/nav1.png" alt="First slide" style="width: 100%;"></div>
+                        <div class="swiper-slide">
+                            <div>
+                                <img src="img/nav1.png" alt="First slide" style="width: 100%;">
+                                <div class="my_swiper_bg"></div>
+                                <div class="my_swiper_text">天下足球标题</div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div>
+                                <img src="img/nav1.png" alt="First slide" style="width: 100%;">
+                                <div class="my_swiper_bg"></div>
+                                <div class="my_swiper_text">天下足球标题</div>
+                            </div>                            
+                        </div>
+                        <div class="swiper-slide">
+                            <div>
+                                <img src="img/nav1.png" alt="First slide" style="width: 100%;">
+                                <div class="my_swiper_bg"></div>
+                                <div class="my_swiper_text">天下足球标题</div>
+                            </div>                            
+                        </div>
+                        <div class="swiper-slide">
+                            <div>
+                                <img src="img/nav1.png" alt="First slide" style="width: 100%;">
+                                <div class="my_swiper_bg"></div>
+                                <div class="my_swiper_text">天下足球标题</div>
+                            </div>                            
+                        </div>
                     </div>
                     <!-- <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div> -->
-                    <div class="swiper-pagination"></div>
+                    <div class="swiper-pagination" style="text-align:right;"></div>
                 </div>
             </div>
             <div class="weui-cell" onclick="goDetails()">
