--- a/pkstart.html
+++ b/pkstart.html
@@ -38,6 +38,7 @@
         <div id="pkstart_content_but">
             <div class="row my_row">
                 <div class="col-xs-4">
+                        <!-- bootstrap 进度条是bootstrap进度条组件，用法参考bootstrap组件-->
                     <button class="btn btn-default" style="background: #F5F5F5;border-radius: 0px;width: 80px" type="submit" onclick="betClick('主胜')">主胜</button>
                     <div>
                         <div class="progress">
