--- a/registered.html
+++ b/registered.html
@@ -12,33 +12,41 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/registered.css" />
 </head>
 <body>
-
-    <div class="row my_row">
-            <div class="col-xs-2">x</div>
-            <div class="col-xs-7"></div>
-            <div class="col-xs-3" style="text-align:right"><a href="login.html">登录</a></div>
-    </div> 
+    <div class="my_registered">
+        <span onclick="goBackClick()">×</span>
+        <span><a href="login.html">登录</a></span>
+    </div>
     <div id="register_content">
         <div class="row">
-            <div class="col-xs-12 my-text-center" style="font-size:20px ">注册帐号</div>
+            <div class="col-xs-12 my-text-center">
+                <h3>注册帐号</h3>
+            </div>
             <div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
             <div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
         </div> 
 
-        <div class="row">
+        <div class="row" style="margin-top:12px">
             <div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
             <div class="col-xs-10"><input type="password" placeholder="设置密码"/></div>
         </div>        
 
-        <div class="row">
+        <div class="row" style="margin-top:12px">
             <div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
             <div class="col-xs-5"><input type="text" placeholder="输入验证码"/></div>
-            <div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px">获取验证码</div>
+            <div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px;">
+                <span id="yzcode">获取验证码</span>
+            </div>
         </div>
-        <div class="row" style="border: none;margin-top: 20px">
-            <div class="col-xs-12 my-text-center"><button class="btn btn-default" type="submit" style="width: 60%;text-align: center;">注册</button></div>
+        <div class="row" style="border: none;margin-top: 30px">
+            <div class="col-xs-12 my-text-center">
+                <button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">注册</button>
+            </div>
         </div>   
-    </div>         
+    </div>
+    <div class="terms">
+        <div>img</div>
+        <span>注册服务</span><a href="###">《条款》</a>
+    </div>        
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
