--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 				</span>
 				<span><a href="registered.html">注册</a></span>
 			</div>
-			<div class="mylogin_titel"><h3 class="page__title">账号登录</h3></div>
+			<div class="mylogin_titel" style="padding-top: 25%"><h3 class="page__title">账号登录</h3></div>
 			<div>
 			    <div id="login_content">
 			        <div class="row">
@@ -62,7 +62,7 @@
 				<span><a href="registered.html">注册</a></span>
 			</div>					
 		</div>
-		<div class="forget_content_t" style="clear: both">
+		<div class="forget_content_t" style="clear: both;padding-top: 25%">
 			<div style="text-align:center"><h3 class="page__title">账号登录</h3></div>
 			<div class="row" style="margin-top:12px;margin-bottom:30px">
 				<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
@@ -92,8 +92,8 @@
 					<span><a href="registered.html">注册</a></span>
 				</div>					
 			</div>
-	    	<div id="forget_content" style="clear: both">
-				<div style="margin-top:20%;text-align:center"><h3 class="mylogin_titel">找回密码</h3></div>
+	    	<div id="forget_content" style="clear: both;padding-top: 25%">
+				<div style="text-align:center"><h3 class="mylogin_titel">找回密码</h3></div>
 				<div class="row">
 					<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
 					<div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
@@ -114,15 +114,20 @@
 		</div>
 		
 		<div id="forgetpage_t" style="display:none">
-			<div style="font-size:35px;padding-left:10px;" onclick="onGogoLogiinClick()"><</div>
-				<div class="forget_content_t">
-					<div style="margin-top:20%;text-align:center"><h3 class="page__title">找回密码</h3></div>
+			<div style="padding-left:8px;">
+				<div class="myclose" style="padding-left: 7px;">
+					<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
+					<span><a href="registered.html">注册</a></span>
+				</div>
+			</div>
+				<div class="forget_content_t" style="clear: both;padding-top: 25%">
+					<div style="text-align:center" ><h3 class="page__title">找回密码</h3></div>
 					<div class="row" style="margin-top:12px;margin-bottom:30px">
-						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
 						<div class="col-xs-10"><input type="password" placeholder="输入密码"/></div>
 					</div>
 					<div class="row" style="margin-top:12px;margin-bottom:30px">
-						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
 						<div class="col-xs-10"><input type="text" placeholder="输入手机验证码"/></div>
 					</div>
 					<div class="row" style="border: none;margin-top:15px" >
