--- a/login.html
+++ b/login.html
@@ -13,122 +13,67 @@
 </head>
 <body>
 	<div class="mylogin">
-		<div id="loginpage" style="display:block;">
-			<div class="myclose">
-				<span onclick="goBackClick()">
-					<img style="width: 20px;" src="img/error.png"/>
-				</span>
-				<span><a href="registered.html">注册</a></span>
-			</div>
-			<div class="mylogin_titel" style="padding-top: 25%"><h3 class="page__title">账号登录</h3></div>
-			<div>
-			    <div id="login_content">
-			        <div class="row">
-			            <div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
-			            <div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
-			        </div> 
-
-			        <div class="row" style="margin-top:12px">
-			            <div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
-			            <div class="col-xs-10"><input type="password" placeholder="输入密码"/></div>
-			        </div>
-			        <div class="row" style="border: none">
-			        	<div class="col-xs-5" style="height: 70px;line-height: 70px;text-align:left;padding:0">
-							<span onclick="gotoLoginYClick()">验证码登录</span>
-						</div>
-			            <div class="col-xs-2" style="height: 70px;line-height: 70px;"></div>
-			            <div class="col-xs-5 my-text-center"  style="height: 70px;line-height: 70px;text-align:right;padding:0">
-							<span onclick="gotoForgetClick()">忘记密码</span>
-						</div>
-			        </div>
-			        <div class="row" style="border: none;margin-top:15px" id="otherlogin">
-			            <div class="col-xs-12 my-text-center">
-			            <button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">登录</button>
-			            </div>
-			        </div>         
-			    </div> 
-			    <!-- <div class="terms">
-			    	<div>img</div>
-			    	<span>注册服务</span><a href="###">《条款》</a>
-			    </div> -->
-		    </div>
-		 </div>
-
-
-	<div id="login_t" style="display:none">
-		<div>
-			<div class="myclose" style="padding-left: 7px;">
-				<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
-				<span><a href="registered.html">注册</a></span>
-			</div>					
-		</div>
-		<div class="forget_content_t" style="clear: both;padding-top: 25%">
-			<div style="text-align:center"><h3 class="page__title">账号登录</h3></div>
-			<div class="row" style="margin-top:12px;margin-bottom:30px">
-				<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
-				<div class="col-xs-10"><input type="text" placeholder="输入手机号"/></div>
-			</div>
-			<div class="row" style="margin-top:12px;margin-bottom:30px">
-				<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
-				<div class="col-xs-5"><input type="text" placeholder="输入验证码"/></div>
-				<div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px;">
-					<span id="yzcode">获取验证码</span>
-				</div>
-			</div>
-			<div class="row" style="border: none;margin-top:15px" >
-				<div class="col-xs-12 my-text-center">
-				<button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">完成</button>
-				</div>
-			</div>  			        	    		
-		</div>
-	</div>  
-
-
-		 
-	    <div id="forgetpage" style="display:none" >
-	    	<div>
-				<div class="myclose" style="padding-left: 7px;">
-					<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
-					<span><a href="registered.html">注册</a></span>
-				</div>					
-			</div>
-	    	<div id="forget_content" style="clear: both;padding-top: 25%">
-				<div style="text-align:center"><h3 class="mylogin_titel">找回密码</h3></div>
-				<div class="row">
-					<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
-					<div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
-				</div>        
-				<div class="row" style="margin-top:12px">
-					<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
-					<div class="col-xs-5"><input type="text" placeholder="输入验证码"/></div>
-					<div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px;">
-						<span id="yzcode">获取验证码</span>
-					</div>
-				</div>
-				<div class="row" style="border: none;margin-top:15px" >
-					<div class="col-xs-12 my-text-center">
-					<button onclick="goToForgetTClick()" class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">提交</button>
-					</div>
-				</div>  			        	    		
-	    	</div>
-		</div>
-		
-		<div id="forgetpage_t" style="display:none">
-			<div style="padding-left:8px;">
-				<div class="myclose" style="padding-left: 7px;">
-					<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
+		<form>
+			<div id="loginpage" style="display:block;">
+				<div class="myclose">
+					<span onclick="goBackClick()">
+						<img style="width: 20px;" src="img/error.png"/>
+					</span>
 					<span><a href="registered.html">注册</a></span>
 				</div>
-			</div>
+				<div class="mylogin_titel" style="padding-top: 25%"><h3 class="page__title">账号登录</h3></div>
+				<div>
+					<div id="login_content">
+						<div class="row">
+							<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
+							<div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
+						</div> 
+
+						<div class="row" style="margin-top:12px">
+							<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
+							<div class="col-xs-10"><input type="password" placeholder="输入密码"/></div>
+						</div>
+						<div class="row" style="border: none">
+							<div class="col-xs-5" style="height: 70px;line-height: 70px;text-align:left;padding:0">
+								<span onclick="gotoLoginYClick()">验证码登录</span>
+							</div>
+							<div class="col-xs-2" style="height: 70px;line-height: 70px;"></div>
+							<div class="col-xs-5 my-text-center"  style="height: 70px;line-height: 70px;text-align:right;padding:0">
+								<span onclick="gotoForgetClick()">忘记密码</span>
+							</div>
+						</div>
+						<div class="row" style="border: none;margin-top:15px" id="otherlogin">
+							<div class="col-xs-12 my-text-center">
+							<button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">登录</button>
+							</div>
+						</div>         
+					</div> 
+					<!-- <div class="terms">
+						<div>img</div>
+						<span>注册服务</span><a href="###">《条款》</a>
+					</div> -->
+				</div>
+				</div>
+
+			<div id="login_t" style="display:none">
+				<div>
+					<div class="myclose" style="padding-left: 7px;">
+						<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
+						<span><a href="registered.html">注册</a></span>
+					</div>					
+				</div>
 				<div class="forget_content_t" style="clear: both;padding-top: 25%">
-					<div style="text-align:center" ><h3 class="page__title">找回密码</h3></div>
+					<div style="text-align:center"><h3 class="page__title">账号登录</h3></div>
 					<div class="row" style="margin-top:12px;margin-bottom:30px">
-						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
-						<div class="col-xs-10"><input type="password" placeholder="输入密码"/></div>
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
+						<div class="col-xs-10"><input type="text" placeholder="输入手机号"/></div>
 					</div>
 					<div class="row" style="margin-top:12px;margin-bottom:30px">
 						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
-						<div class="col-xs-10"><input type="text" placeholder="输入手机验证码"/></div>
+						<div class="col-xs-5"><input type="text" placeholder="输入验证码"/></div>
+						<div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px;">
+							<span id="yzcode">获取验证码</span>
+						</div>
 					</div>
 					<div class="row" style="border: none;margin-top:15px" >
 						<div class="col-xs-12 my-text-center">
@@ -137,9 +82,61 @@
 					</div>  			        	    		
 				</div>
 			</div>  
-		</div>
-		
-		
+
+			<div id="forgetpage" style="display:none" >
+				<div>
+					<div class="myclose" style="padding-left: 7px;">
+						<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
+						<span><a href="registered.html">注册</a></span>
+					</div>					
+				</div>
+				<div id="forget_content" style="clear: both;padding-top: 25%">
+					<div style="text-align:center"><h3 class="mylogin_titel">找回密码</h3></div>
+					<div class="row">
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-phone"></span></div>
+						<div class="col-xs-10"><input type="text" placeholder="(中国+86)输入手机号"/></div>
+					</div>        
+					<div class="row" style="margin-top:12px">
+						<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
+						<div class="col-xs-5"><input type="text" placeholder="输入验证码"/></div>
+						<div class="col-xs-5 my-text-center"  style="height: 50px;line-height: 50px;">
+							<span id="yzcode">获取验证码</span>
+						</div>
+					</div>
+					<div class="row" style="border: none;margin-top:15px" >
+						<div class="col-xs-12 my-text-center">
+						<button onclick="goToForgetTClick()" class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">提交</button>
+						</div>
+					</div>  			        	    		
+				</div>
+			</div>
+			
+			<div id="forgetpage_t" style="display:none">
+				<div style="padding-left:8px;">
+					<div class="myclose" style="padding-left: 7px;">
+						<span onclick="goLoginClick()"><img style="width: 25px;" src="img/my_left.png"></span>
+						<span><a href="registered.html">注册</a></span>
+					</div>
+				</div>
+					<div class="forget_content_t" style="clear: both;padding-top: 25%">
+						<div style="text-align:center" ><h3 class="page__title">找回密码</h3></div>
+						<div class="row" style="margin-top:12px;margin-bottom:30px">
+							<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
+							<div class="col-xs-10"><input type="password" placeholder="输入密码"/></div>
+						</div>
+						<div class="row" style="margin-top:12px;margin-bottom:30px">
+							<div class="col-xs-2" style="height: 50px;line-height: 50px;"><span class="glyphicon glyphicon-lock"></span></div>
+							<div class="col-xs-10"><input type="text" placeholder="输入手机验证码"/></div>
+						</div>
+						<div class="row" style="border: none;margin-top:15px" >
+							<div class="col-xs-12 my-text-center">
+							<button class="btn btn-default" type="submit" style="width: 70%;text-align: center;height:50px;font-size:16px;color:#111">完成</button>
+							</div>
+						</div>  			        	    		
+					</div>
+			</div>
+		</form>
+	</div>	
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
