--- a/choselogin.html
+++ b/choselogin.html
@@ -14,8 +14,8 @@
 	<div class="choselogin">
 		<div class="close" onclick="goBackClick()">×</div>
 		<div class="logo">
-			<img src="img/my_top.png">
-			<div>公众号logo</div>
+			<img src="img/logo.png" style="width: 150px;">
+			<div>追球者</div>
 		</div>
 		<div class="my_but">
 			<a href="javascript:;" class="weui-btn weui-btn_primary">微信登录</a>
