--- a/topup.html
+++ b/topup.html
@@ -13,29 +13,132 @@
 </head>
 <body>
     <div id="otherheader"></div>
-    <div id="topup_top">
-        <h2 style="padding:0;margin:0">500</h2>
-        <p>当前拥有的积分</p>
-    </div>
-    <div class="topup_but">
-        <a>充值</a>
-    </div>
-    <div style="padding:20px">
-        <div>积分记录</div>
-        <div>
-            <div  id="topup_list">
-                <ul>
-                    <li>06-10</li>
-                    <li>新用户</li>
-                    <li>
-                        <p style="color:#32CF85">+500</p>
-                        <p>流水编号:438945456</p>
-                    </li>
-                </ul>
+	<div class="topup" id="topup">
+		<div id="topup_top">
+			<h2 style="padding:0;margin:0">500</h2>
+			<p>当前拥有的积分</p>
+		</div>
+		<div class="topup_but">
+			<a id="my_show_but" href="javascript:;">充值</a>
+		</div>
+		<div style="padding:20px">
+			<div>积分记录</div>
+			<div>
+				<div  id="topup_list">
+					<ul>
+						<li>06-10</li>
+						<li>新用户</li>
+						<li>
+							<p style="color:#32CF85">+500</p>
+				    		<p>流水编号:438945456</p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+        <div style="display: none" id="my_page_buttom">
+        <div class="weui-mask weui-animate-fade-in"></div>
+        <div class="weui-picker weui-animate-slide-up">
+            <div class="weui-picker__bd" style="height:420px">
+            <div class="weui-picker__group">
+                <div class="weui-picker__mask" >
+                	<div class="but_titel">购买积分:(1元=100积分)</div>
+					<div class="weui-flex">
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px;background-color: #30CE81;color:#fff;border:none">
+					    		<span style="color:#fff">
+                                    <span class="topup_num" style="display: inline-block;margin: 0;padding: 0">5</span>
+                                    元</span>
+					    		<span style="color:#fff">500积分</span>
+					    	</div>
+					    </div>
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span>
+                                    <span class="topup_num" style="display: inline-block;margin: 0;padding: 0">10</span>
+                                    元
+                                </span>
+					    		<span>1000积分</span>
+					    	</div>
+					    </div>
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span><span class="topup_num" style="display: inline-block;margin: 0;padding: 0">20</span>元</span>
+					    		<span>2000积分</span>
+					    	</div>
+					    </div>
+					</div>
+					<div class="weui-flex">
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span><span class="topup_num" style="display: inline-block;margin: 0;padding: 0">50元</span></span>
+					    		<span>5000积分</span>
+					    	</div>
+					    </div>
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span><span class="topup_num" style="display: inline-block;margin: 0;padding: 0">100</span>元</span>
+					    		<span>10000积分</span>
+					    	</div>
+					    </div>
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span><span class="topup_num" style="display: inline-block;margin: 0;padding: 0">200</span>元</span>
+					    		<span>20000积分</span>
+					    	</div>
+					    </div>
+					</div>
+					<div class="weui-flex">
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span><span class="topup_num" style="display: inline-block;margin: 0;padding: 0">300</span></span>
+					    		<span>30000积分</span>
+					    	</div>
+					    </div>
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span><span class="topup_num" style="display: inline-block;margin: 0;padding: 0">500</span>元</span>
+					    		<span>50000积分</span>
+					    	</div>
+					    </div>
+					    <div class="weui-flex__item">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span><span class="topup_num">1000</span>元</span>
+					    		<span>100000积分</span>
+					    	</div>
+					    </div>
+					</div>
+					<div class="zhifu_title_text">支付方式</div>
+					<p style="margin:6px;color:#ccc">您的会员等级LV2，赠送10积分</p>
+					<div class="zhifu_title_text">
+						支付方式
+						<span class="zhifu_title_text_right">
+							<strong style="font-size:19px" id="pay_momey">5</strong>元
+						</span>
+					</div>
+					<div class="zhifu_img">
+						<span>
+							<img style="width:30px;" src="img/can.png">微信支付
+						</span>
+						<img class="zhifu_img_last" src="img/can_1.png">
+					</div>
+                </div>
+            </div>
+            </div>
+            <div class="weui-picker__hd" style="padding:0;margin:0;text-align:center">
+                <a onclick="cancelClick()" style="color:#888;background-color:#EEEEEE;text-align:center" href="javascript:;" data-action="cancel" class="weui-picker__action">取消</a>
+                <a  onclick="successfulClick()" style="color:#fff;background-color:#30CE81;text-align:center" href="javascript:;" data-action="select" class="weui-picker__action" id="weui-picker-confirm">确定</a>
+            </div>            
+        </div>
+        </div>
+        <div id="toast" style="display: none;">
+            <div class="weui-mask_transparent"></div>
+            <div class="weui-toast">
+                <i class="weui-icon-success-no-circle weui-icon_toast"></i>
+                <p class="weui-toast__content">充值成功</p>
             </div>
         </div>
-    </div>
-	</div>       
+	</div>
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
