--- a/user.html
+++ b/user.html
@@ -18,7 +18,7 @@
                 <div class="weui-panel" style="margin-bottom:20px;">
                     <div class="weui-panel__bd">
                         <div class="weui-media-box weui-media-box_small-appmsg">
-                            <div class="weui-cells">
+                            <div class="weui-cells" onclick="goPageClick('myindex')">
                                 <div class="weui-cell weui-cell_access">
                                     <div class="weui-cell__hd my_hp" >
                                         <img src="img/my_top.png" style="width:55px;margin-right:5px;display:block;border-radius: 50%;">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="user_content_list" style="background:#fff">
-                    <div class="weui-cell weui-cell_access">
+                    <div class="weui-cell weui-cell_access" onclick="goPageClick('topup')">
                         <div class="weui-cell__bd">
                             <span style="vertical-align: middle"><img style="width:25px" src="img/momey_package.png"/></span>
                             <span style="margin-left: 5px;">钱包</span>
@@ -49,14 +49,14 @@
                     </div>
                 </div>
                 <div class="user_content_list" style="background:#fff;margin-top:20px;">
-                    <div class="weui-cell weui-cell_access">
+                    <div class="weui-cell weui-cell_access" onclick="goPageClick('mypk')">
                         <div class="weui-cell__bd">
                             <span style="vertical-align: middle"><img style="width:25px" src="img/my_pk.png"/></span>
                             <span style="margin-left: 5px;">我的竞赛</span>
                         </div>
                         <div class="weui-cell__ft"></div>
                     </div>
-                    <div class="weui-cell weui-cell_access">
+                    <div class="weui-cell weui-cell_access" onclick="goPageClick('ranking')">
                         <div class="weui-cell__bd">
                             <span style="vertical-align: middle"><img style="width:25px" src="img/my_top_pk.png"/></span>
                                 <span  style="margin-left: 5px;">我的排名</span>
