--- a/myindex.html
+++ b/myindex.html
@@ -50,7 +50,7 @@
             </div>
             <div id="analysis">
                 <div class="analysis_left">
-                    <p style="color: #32CE85;">50%</p>
+                    <p style="color: #32CE85;margin-top: 15px">50%</p>
                     <p>胜率</p>
                 </div>
                 <!-- 用JS去设置 analysis_right_line类下的span百分长度即可控制进度条 -->
@@ -82,7 +82,7 @@
                     <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
                     <div class="placeholder" style="position: relative;">
-                        <span style="display:inline-block;margin-right:10px;max-width:47px;float:left">俄罗斯</span>
+                        <span style="display:inline-block;margin-right:10px;max-width:49px;float:left">俄罗斯</span>
                         <span style="display:inline-block;position:absolute;right:15px;"><img style="width:16px;" src="img/my_pk.png"></span>
                     </div>
                 </div>
@@ -105,12 +105,13 @@
                     <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
                 </div>	    	
            </div>
+    
             <div class="mypk_list">
                 <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative">
                     <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
                     <div class="placeholder" style="position: relative;">
-                        <span style="display:inline-block;margin-right:10px;max-width:47px;float:left">俄罗斯</span>
+                        <span style="display:inline-block;margin-right:10px;max-width:49px;float:left">俄罗斯</span>
                         <span style="display:inline-block;position:absolute;right:15px;"><img style="width:16px;" src="img/my_pk.png"></span>
                     </div>
                 </div>
@@ -133,15 +134,14 @@
                     <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
                 </div>	    	
            </div>
+    
            </div>
-        </div>    
+        </div>
+
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
 <script src="third/jquery/jquery.min.js"></script>
-<script src="third/jquery/bootstrap.min.js"></script>
-<script src="third/jquery/bootstrap.min.js"></script>
-<script src="third/swiper/swiper.min.js"></script>
 <!-- base lib-基础库 end-->
 <script src="lib/namespace.js"></script><!--namespace 全局匿名空间封装  -->
 <script src="lib/utlis.js"></script><!--untils 公共函数封装，包括验证方法 -->
