--- a/myindex.html
+++ b/myindex.html
@@ -78,7 +78,7 @@
             </div>
             <div>
             <div class="mypk_list">
-                <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative">
+                <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative;font-size:12px">
                     <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
                     <div class="placeholder" style="position: relative;">
