--- a/myindex.html
+++ b/myindex.html
@@ -78,7 +78,7 @@
             </div>
             <div>
             <div class="mypk_list">
-                <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative;font-size:12px">
+                <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative;font-size: 12px">
                     <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
                     <div class="placeholder" style="position: relative;">
@@ -87,15 +87,15 @@
                     </div>
                 </div>
                 <div class="weui-flex__item" style="padding-top:13px"><div class="placeholder" style="text-align:left">沙特</div></div>
-                <div class="weui-flex__item"><div class="placeholder" style="padding-top:20px;background-color:#fff;text-align:left">---</div></div>
-                <div class="weui-flex__item" style="padding-top:3px">
+                <div class="weui-flex__item"><div class="placeholder" style="padding-top:15px;background-color:#fff;text-align:left">---</div></div>
+                <div class="weui-flex__item" style="padding-top:3px;font-size: 12px">
                     <div class="placeholder">
                         <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
                         <p>未开奖</p>
                     </div>
                 </div>
                 </div>
-                <div class="weui-flex" style="background-color:#fff">
+                <div class="weui-flex" style="background-color:#fff;font-size: 12px">
                     <div class="weui-flex__item">
                         <div class="placeholder">
                             <span style="color:#ccc">参战费:</span>100积分
@@ -117,14 +117,14 @@
                 </div>
                 <div class="weui-flex__item" style="padding-top:13px"><div class="placeholder" style="text-align:left">沙特</div></div>
                 <div class="weui-flex__item"><div class="placeholder" style="padding-top:20px;background-color:#fff;text-align:left">---</div></div>
-                <div class="weui-flex__item" style="padding-top:3px">
+                <div class="weui-flex__item" style="padding-top:3px;font-size: 12px">
                     <div class="placeholder">
                         <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
                         <p>未开奖</p>
                     </div>
                 </div>
                 </div>
-                <div class="weui-flex" style="background-color:#fff">
+                <div class="weui-flex" style="background-color:#fff;font-size: 12px">
                     <div class="weui-flex__item">
                         <div class="placeholder">
                             <span style="color:#ccc">参战费:</span>100积分
