--- a/myindex.html
+++ b/myindex.html
@@ -76,64 +76,64 @@
                 <span>最近五场竞赛</span>
                 <div class="myidnex_titel_line"></div>
             </div>
-            <div>
-                <div class="mypk_list">
-                    <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative;font-size: 12px">
-                        <span class="my_type_pk">世界杯</span>
+            <div class="mypk_list">
+                <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative">
+                    <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px">
                         <div class="placeholder" style="position: relative;">
-                            <span style="display:inline-block;margin-right:10px;max-width:49px;float:left">俄罗斯</span>
+                            <span style="display:inline-block;margin-right:10px;max-width:48px;">俄罗斯</span>
                             <span style="display:inline-block;position:absolute;right:15px;"><img style="width:16px;" src="img/my_pk.png"></span>
                         </div>
                     </div>
-                    <div class="weui-flex__item" style="padding-top:13px"><div class="placeholder" style="text-align:left">沙特</div></div>
-                    <div class="weui-flex__item"><div class="placeholder" style="padding-top:15px;background-color:#fff;text-align:left">---</div></div>
-                    <div class="weui-flex__item" style="padding-top:3px;font-size: 12px">
+                    <div class="weui-flex__item" style="padding-top:13px"><div class="placeholder">沙特</div></div>
+                    <div class="weui-flex__item"><div class="placeholder" style="padding-top:13px">---</div></div>
+                    <div class="weui-flex__item" style="padding-top:3px">
                         <div class="placeholder">
                             <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
                             <p>未开奖</p>
                         </div>
                     </div>
-                    </div>
-                    <div class="weui-flex" style="background-color:#fff;font-size: 12px">
-                        <div class="weui-flex__item">
-                            <div class="placeholder">
-                                <span style="color:#ccc">参战费:</span>100积分
-                            </div>
-                        </div>
-                        <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">奖池:</span>3000积分</div></div>
-                        <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
-                    </div>	    	
                 </div>
-                <div class="mypk_list">
-                    <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative;font-size: 12px">
-                        <span class="my_type_pk">世界杯</span>
+                <div class="weui-flex" style="background-color:#fff">
+                    <div class="weui-flex__item">
+                        <div class="placeholder">
+                            <span style="color:#ccc">参战费:</span>100积分
+                        </div>
+                    </div>
+                    <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">奖池:</span>3000积分</div></div>
+                    <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
+                </div>		
+            </div> 
+            
+            <div class="mypk_list">
+                <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative">
+                    <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px">
                         <div class="placeholder" style="position: relative;">
-                            <span style="display:inline-block;margin-right:10px;max-width:49px;float:left">俄罗斯</span>
+                            <span style="display:inline-block;margin-right:10px;max-width:48px;">俄罗斯</span>
                             <span style="display:inline-block;position:absolute;right:15px;"><img style="width:16px;" src="img/my_pk.png"></span>
                         </div>
                     </div>
-                    <div class="weui-flex__item" style="padding-top:13px"><div class="placeholder" style="text-align:left">沙特</div></div>
-                    <div class="weui-flex__item"><div class="placeholder" style="padding-top:15px;background-color:#fff;text-align:left">---</div></div>
-                    <div class="weui-flex__item" style="padding-top:3px;font-size: 12px">
+                    <div class="weui-flex__item" style="padding-top:13px"><div class="placeholder">沙特</div></div>
+                    <div class="weui-flex__item"><div class="placeholder" style="padding-top:13px">---</div></div>
+                    <div class="weui-flex__item" style="padding-top:3px">
                         <div class="placeholder">
                             <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
                             <p>未开奖</p>
                         </div>
                     </div>
-                    </div>
-                    <div class="weui-flex" style="background-color:#fff;font-size: 12px">
-                        <div class="weui-flex__item">
-                            <div class="placeholder">
-                                <span style="color:#ccc">参战费:</span>100积分
-                            </div>
+                </div>
+                <div class="weui-flex" style="background-color:#fff">
+                    <div class="weui-flex__item">
+                        <div class="placeholder">
+                            <span style="color:#ccc">参战费:</span>100积分
                         </div>
-                        <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">奖池:</span>3000积分</div></div>
-                        <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
-                    </div>	    	
-                </div>    
-           </div>
+                    </div>
+                    <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">奖池:</span>3000积分</div></div>
+                    <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
+                </div>		
+            </div>             
+            
         </div>
 
 </body>
