--- a/topup.html
+++ b/topup.html
@@ -39,7 +39,7 @@
         <div style="display: none" id="my_page_buttom">
         <div class="weui-mask weui-animate-fade-in"></div>
         <div class="weui-picker weui-animate-slide-up">
-            <div class="weui-picker__bd" style="height:420px">
+            <div class="weui-picker__bd" style="height:475x">
             <div class="weui-picker__group">
                 <div class="weui-picker__mask" >
                 	<div class="but_titel">购买积分:(1元=100积分)</div>
