--- a/topup.html
+++ b/topup.html
@@ -39,17 +39,17 @@
         <div style="display: none" id="my_page_buttom">
         <div class="weui-mask weui-animate-fade-in"></div>
         <div class="weui-picker weui-animate-slide-up">
-            <div class="weui-picker__bd" style="height:475x">
+            <div class="weui-picker__bd" style="height:475px">
             <div class="weui-picker__group">
                 <div class="weui-picker__mask" >
                 	<div class="but_titel">购买积分:(1元=100积分)</div>
 					<div class="weui-flex">
 					    <div class="weui-flex__item">
-					    	<div class="placeholder" style="padding-top:10px;background-color: #30CE81;color:#fff;border:none">
-					    		<span style="color:#fff">
+					    	<div class="placeholder" style="padding-top:10px">
+					    		<span>
                                     <span class="topup_num" style="display: inline-block;margin: 0;padding: 0">5</span>
                                     元</span>
-					    		<span style="color:#fff">500积分</span>
+					    		<span>500积分</span>
 					    	</div>
 					    </div>
 					    <div class="weui-flex__item">
