--- a/user.html
+++ b/user.html
@@ -40,7 +40,7 @@
                         </div>
                         <div class="weui-cell__ft"></div>
                     </div>
-                    <div class="weui-cell weui-cell_access">
+                    <div class="weui-cell weui-cell_access" onclick="goPageClick('rush')">
                         <div class="weui-cell__bd">
                             <span style="vertical-align: middle"><img style="width:25px" src="img/top-up.png"/></span>
                                 <span  style="margin-left: 5px;">充值</span>
