--- a/myindex.html
+++ b/myindex.html
@@ -76,8 +76,8 @@
                 <span>最近五场竞赛</span>
                 <div class="myidnex_titel_line"></div>
             </div>
-            <div class="mypk_list">
-                <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative">
+            <div class="mypk_list" style="height: 85px;">
+                <div class="weui-flex" style="background-color:#fff;position:relative">
                     <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px">
                         <div class="placeholder" style="position: relative;">
@@ -106,7 +106,7 @@
             </div> 
             
             <div class="mypk_list">
-                <div class="weui-flex" style="background-color:#fff;padding-top:10px;position:relative">
+                <div class="weui-flex" style="background-color:#fff;position:relative">
                     <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px">
                         <div class="placeholder" style="position: relative;">
