--- a/pkstart.html
+++ b/pkstart.html
@@ -133,8 +133,10 @@
     <div id="my_mode">
     </div>
     <div id="bet">
+        <form>
         <div id="bet_titel" class="my-text-color-t">
-            你当前选择为：<span id="choose_text"></span>
+
+            你当前选择为：<input type="text" value="" id="choose_text"  readonly="readonly" style="border:none;background: #eeeeee"/>  
             <div id="close" onclick="closeBetClick()"><img style="width:20px;" src="img/colse.png"/></div>
         </div>
         <div id="bet_content">
@@ -143,13 +145,14 @@
         <div id="bet_but">
             <ul>
                 <li onclick="reductionClick()">-</li>
-                <li class="bet_but_num">0</li>
+                <li class="bet_but_num"><input type="text" value="0" style="border: none;width: 100%;text-align: center;height: 40px;" readonly="readonly"></li>
                 <li class="my-text-color-t" onclick="addClick()">+</li>
             </ul>
             <div id="my_submit">
                 <button class="btn btn-default my-but-style" type="submit">立即投注<span id="integral_num">100</span>积分</button>
             </div>
         </div>
+        </form>
     </div>
     <div id="footer"></div>
 </body>
