--- a/topup.html
+++ b/topup.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div id="otherheader"></div>
-	<div class="topup" id="topup">
+	<div class="topup">
 		<div id="topup_top">
-			<h2 style="padding:0;margin:0">500</h2>
+			<h2 style="padding-top:39px;margin:0">500</h2>
 			<p>当前拥有的积分</p>
 		</div>
 		<div class="topup_but">
