--- a/mypk.html
+++ b/mypk.html
@@ -15,7 +15,7 @@
     <div class="mypk">
         <div class="mypk_titel" style="padding-top: 50px">所有的竞猜记录</div>
         <div class="mypk_list">
-            <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative">
+            <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
                     <div class="placeholder" style="position: relative;">
@@ -43,7 +43,7 @@
             </div>		
         </div>
         <div class="mypk_list">
-            <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative">
+            <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
                     <div class="placeholder" style="position: relative;">
@@ -70,9 +70,8 @@
                 <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
             </div>		
         </div> 
-        
         <div class="mypk_list">
-            <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative">
+            <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
                     <div class="placeholder" style="position: relative;">
@@ -100,10 +99,8 @@
                 <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
             </div>		
         </div> 
-        
-
     </div>
-    <div class="my_pk_back_but"><a>返回竞赛</a></div>	   
+    <div class="my_pk_back_but"><a href="quiz.html">返回竞猜</a></div>	   
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
