--- a/ranking.html
+++ b/ranking.html
@@ -92,7 +92,7 @@
             </div>                       
         </div>
     </div>
-
+    <div id="footer"></div>
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
@@ -104,4 +104,5 @@
 <script src="lib/utlis.js"></script><!--untils 公共函数封装，包括验证方法 -->
 <!-- component 头部，底部引用 -->
 <script src="component/header/otherheader.js"></script>
+<script src="component/footer/footer.js"></script>
 <script type="text/javascript"  src="js/ranking.js"></script>
