--- a/myindex.html
+++ b/myindex.html
@@ -77,9 +77,9 @@
                 <div class="myidnex_titel_line"></div>
             </div>
             <div class="mypk_list" style="height: 85px;">
-                <div class="weui-flex" style="background-color:#fff;position:relative">
+                <div class="weui-flex" style="background-color:#fff;position:relative;margin-bottom: 7px;">
                     <span class="my_type_pk">世界杯</span>
-                    <div class="weui-flex__item" style="padding-top:13px">
+                    <div class="weui-flex__item" style="padding-top:13px;">
                         <div class="placeholder" style="position: relative;">
                             <span style="display:inline-block;margin-right:10px;max-width:48px;">俄罗斯</span>
                             <span style="display:inline-block;position:absolute;right:15px;"><img style="width:16px;" src="img/my_pk.png"></span>
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="weui-flex" style="background-color:#fff">
+                <div class="weui-flex" style="background-color:#fff;margin-bottom: 7px;">
                     <div class="weui-flex__item">
                         <div class="placeholder">
                             <span style="color:#ccc">参战费:</span>100积分
