--- a/emptypk.html
+++ b/emptypk.html
@@ -12,13 +12,13 @@
 </head>
 <body>
     <div id="otherheader"></div>
-    <div class="mypk_titel" style="padding-top: 50px">所有的竞猜记录</div>
+    <div class="mypk_titel" style="padding-top: 50px">所有的赛事记录</div>
         <div id="emptypk">
             <img src="img/emptypk.png">
             <p class="emptypk_text">还没有竞赛记录哦</p>
             <p>赶紧加入竞赛，礼品等着你哦～</p>
         </div>
-    <div class="my_pk_back_but"><a>返回竞赛</a></div>	   
+    <div class="my_pk_back_but"><a>返回赛事</a></div>	   
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
