--- a/mypk.html
+++ b/mypk.html
@@ -13,7 +13,7 @@
 <body>
     <div id="otherheader"></div> 
     <div class="mypk">
-        <div class="mypk_titel" style="padding-top: 50px">所有的竞猜记录</div>
+        <div class="mypk_titel" style="padding-top: 50px">所有的赛事记录</div>
         <div class="mypk_list">
             <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
@@ -52,11 +52,11 @@
                     </div>
                 </div>
                 <div class="weui-flex__item" style="padding-top:13px"><div class="placeholder">沙特</div></div>
-                <div class="weui-flex__item"><div class="placeholder" style="padding-top:13px">---</div></div>
+                <div class="weui-flex__item"><div class="placeholder" style="padding-top:8px;font-size: 16px;color:#32CE85">+800</div></div>
                 <div class="weui-flex__item" style="padding-top:3px">
                     <div class="placeholder">
                         <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
-                        <p>未开奖</p>
+                        <p>已结束</p>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="weui-flex__item" style="padding-top:13px"><div class="placeholder">沙特</div></div>
-                <div class="weui-flex__item"><div class="placeholder" style="padding-top:13px">---</div></div>
+                <div class="weui-flex__item"><div class="placeholder" style="padding-top:8px;font-size: 16px;">输</div></div>
                 <div class="weui-flex__item" style="padding-top:3px">
                     <div class="placeholder">
                         <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
@@ -100,7 +100,7 @@
             </div>		
         </div> 
     </div>
-    <div class="my_pk_back_but"><a href="quiz.html">返回竞猜</a></div>	   
+    <div class="my_pk_back_but"><a href="quiz.html">返回赛事</a></div>	   
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
