--- a/myindex.html
+++ b/myindex.html
@@ -104,11 +104,11 @@
                     <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
                 </div>		
             </div> 
-            
-            <div class="mypk_list">
-                <div class="weui-flex" style="background-color:#fff;position:relative">
+        
+            <div class="mypk_list" style="height: 85px;">
+                <div class="weui-flex" style="background-color:#fff;position:relative;margin-bottom: 7px;">
                     <span class="my_type_pk">世界杯</span>
-                    <div class="weui-flex__item" style="padding-top:13px">
+                    <div class="weui-flex__item" style="padding-top:13px;">
                         <div class="placeholder" style="position: relative;">
                             <span style="display:inline-block;margin-right:10px;max-width:48px;">俄罗斯</span>
                             <span style="display:inline-block;position:absolute;right:15px;"><img style="width:16px;" src="img/my_pk.png"></span>
@@ -119,11 +119,11 @@
                     <div class="weui-flex__item" style="padding-top:3px">
                         <div class="placeholder">
                             <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
-                            <p>已结束</p>
+                            <p>未开奖</p>
                         </div>
                     </div>
                 </div>
-                <div class="weui-flex" style="background-color:#fff">
+                <div class="weui-flex" style="background-color:#fff;margin-bottom: 7px;">
                     <div class="weui-flex__item">
                         <div class="placeholder">
                             <span style="color:#ccc">参战费:</span>100积分
@@ -132,12 +132,11 @@
                     <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">奖池:</span>3000积分</div></div>
                     <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
                 </div>		
-            </div>             
-
-            <div class="mypk_list">
-                <div class="weui-flex" style="background-color:#fff;position:relative">
+            </div> 
+            <div class="mypk_list" style="height: 85px;">
+                <div class="weui-flex" style="background-color:#fff;position:relative;margin-bottom: 7px;">
                     <span class="my_type_pk">世界杯</span>
-                    <div class="weui-flex__item" style="padding-top:13px">
+                    <div class="weui-flex__item" style="padding-top:13px;">
                         <div class="placeholder" style="position: relative;">
                             <span style="display:inline-block;margin-right:10px;max-width:48px;">俄罗斯</span>
                             <span style="display:inline-block;position:absolute;right:15px;"><img style="width:16px;" src="img/my_pk.png"></span>
@@ -148,11 +147,11 @@
                     <div class="weui-flex__item" style="padding-top:3px">
                         <div class="placeholder">
                             <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
-                            <p>已结束</p>
+                            <p>未开奖</p>
                         </div>
                     </div>
                 </div>
-                <div class="weui-flex" style="background-color:#fff">
+                <div class="weui-flex" style="background-color:#fff;margin-bottom: 7px;">
                     <div class="weui-flex__item">
                         <div class="placeholder">
                             <span style="color:#ccc">参战费:</span>100积分
@@ -163,7 +162,6 @@
                 </div>		
             </div> 
         </div>
-
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
