--- a/user.html
+++ b/user.html
@@ -52,7 +52,7 @@
                     <div class="weui-cell weui-cell_access" onclick="goPageClick('mypk')">
                         <div class="weui-cell__bd">
                             <span style="vertical-align: middle"><img style="width:23px" src="img/my_pk.png"/></span>
-                            <span style="margin-left: 5px;">我的竞赛</span>
+                            <span style="margin-left: 5px;">我的赛事</span>
                         </div>
                         <div class="weui-cell__ft"></div>
                     </div>
