--- a/myindex.html
+++ b/myindex.html
@@ -56,7 +56,7 @@
                 <!-- 用JS去设置 analysis_right_line类下的span百分长度即可控制进度条 -->
                 <div class="analysis_right">
                     <div class="analysis_right_content">
-                        <div class="analysis_right_titel">总竞赛</div>
+                        <div class="analysis_right_titel">总赛事</div>
                         <div class="analysis_right_line"><span style="width:10%;"></span></div>
                         <div class="analysis_right_num">1次</div>
                     </div>
@@ -76,7 +76,7 @@
                 <span>最近五场赛事</span>
                 <div class="myidnex_titel_line"></div>
             </div>
-            <div class="mypk_list" style="height: 85px;">
+            <div class="mypk_list" style="height: 85px;" onclick="goDetailsPageClick('pkstart')">
                 <div class="weui-flex" style="background-color:#fff;position:relative;margin-bottom: 7px;">
                     <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px;">
@@ -105,7 +105,7 @@
                 </div>		
             </div> 
         
-            <div class="mypk_list" style="height: 85px;">
+            <div class="mypk_list" style="height: 85px;" onclick="goDetailsPageClick('emptypk')">
                 <div class="weui-flex" style="background-color:#fff;position:relative;margin-bottom: 7px;">
                     <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px;">
@@ -119,7 +119,7 @@
                     <div class="weui-flex__item" style="padding-top:3px">
                         <div class="placeholder">
                             <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
-                            <p>未开奖</p>
+                            <p>已结束</p>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
                 </div>		
             </div> 
-            <div class="mypk_list" style="height: 85px;">
+            <div class="mypk_list" style="height: 85px;" onclick="goDetailsPageClick('emptypk')">
                 <div class="weui-flex" style="background-color:#fff;position:relative;margin-bottom: 7px;">
                     <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px;">
@@ -147,7 +147,7 @@
                     <div class="weui-flex__item" style="padding-top:3px">
                         <div class="placeholder">
                             <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
-                            <p>未开奖</p>
+                            <p>已结束</p>
                         </div>
                     </div>
                 </div>
