--- a/mypk.html
+++ b/mypk.html
@@ -14,7 +14,7 @@
     <div id="otherheader"></div> 
     <div class="mypk">
         <div class="mypk_titel" style="padding-top: 50px">所有的赛事记录</div>
-        <div class="mypk_list">
+        <div class="mypk_list" onclick="goDetailsPageClick('pkstart')">
             <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
@@ -42,7 +42,7 @@
                 <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
             </div>		
         </div>
-        <div class="mypk_list">
+        <div class="mypk_list" onclick="goDetailsPageClick('emptypk')">
             <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
@@ -70,7 +70,7 @@
                 <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
             </div>		
         </div> 
-        <div class="mypk_list">
+        <div class="mypk_list" onclick="goDetailsPageClick('emptypk')">
             <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
@@ -84,7 +84,7 @@
                 <div class="weui-flex__item" style="padding-top:3px">
                     <div class="placeholder">
                         <p style="color:#ccc;margin-bottom:0px;">5/1000</p>
-                        <p>未开奖</p>
+                        <p>已结束</p>
                     </div>
                 </div>
             </div>
