--- a/emptypk.html
+++ b/emptypk.html
@@ -18,7 +18,7 @@
             <p class="emptypk_text">还没有竞赛记录哦</p>
             <p>赶紧加入竞赛，礼品等着你哦～</p>
         </div>
-    <div class="my_pk_back_but"><a>返回赛事</a></div>	   
+    <div class="my_pk_back_but"><a href="pkstart.html">返回赛事</a></div>	   
 </body>
 </html>
 <!-- third-第三方库(必须) begin -->
