--- a/myindex.html
+++ b/myindex.html
@@ -105,7 +105,7 @@
                 </div>		
             </div> 
         
-            <div class="mypk_list" style="height: 85px;" onclick="goDetailsPageClick('emptypk')">
+            <div class="mypk_list" style="height: 85px;" onclick="goDetailsPageClick('pkend')">
                 <div class="weui-flex" style="background-color:#fff;position:relative;margin-bottom: 7px;">
                     <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px;">
@@ -133,7 +133,7 @@
                     <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
                 </div>		
             </div> 
-            <div class="mypk_list" style="height: 85px;" onclick="goDetailsPageClick('emptypk')">
+            <div class="mypk_list" style="height: 85px;" onclick="goDetailsPageClick('pkend')">
                 <div class="weui-flex" style="background-color:#fff;position:relative;margin-bottom: 7px;">
                     <span class="my_type_pk">世界杯</span>
                     <div class="weui-flex__item" style="padding-top:13px;">
