--- a/mypk.html
+++ b/mypk.html
@@ -42,7 +42,7 @@
                 <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
             </div>		
         </div>
-        <div class="mypk_list" onclick="goDetailsPageClick('emptypk')">
+        <div class="mypk_list" onclick="goDetailsPageClick('pkend')">
             <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
@@ -70,7 +70,7 @@
                 <div class="weui-flex__item"><div class="placeholder"><span style="color:#ccc">日期:</span>2008.10.20</div></div>
             </div>		
         </div> 
-        <div class="mypk_list" onclick="goDetailsPageClick('emptypk')">
+        <div class="mypk_list" onclick="goDetailsPageClick('pkend')">
             <div class="weui-flex" style="background-color:#fff;padding-top:20px;position:relative;margin-bottom: 10px;">
                 <span class="my_type_pk">世界杯</span>
                 <div class="weui-flex__item" style="padding-top:13px">
