--- a/myindex.html
+++ b/myindex.html
@@ -16,7 +16,9 @@
 	<div class="myindex" style="padding-top: 50px;">
             <div id="myindex_img">
                 <div><img src="img/user_img1.png"></div>
-                <div style="margin-top:10px;">A杨洋洋1</div>
+                <div style="margin-top:10px;">
+                    <span style="display: inline-block;margin-left: 60px;">A杨洋洋1</span> 
+                    <span class="my_lv">LV0</span></div>
             </div>
             <div class="weui-flex" id="my_placeholder">
                 <div class="weui-flex__item">
