--- a/user.html
+++ b/user.html
@@ -63,13 +63,13 @@
                         </div>
                         <div class="weui-cell__ft"></div>
                     </div> 
-                    <div class="weui-cell weui-cell_access">
+                    <!-- <div class="weui-cell weui-cell_access">
                         <div class="weui-cell__bd">
                             <span style="vertical-align: middle"><img style="width:23px" src="img/my_level.png"/></span>
                                 <span  style="margin-left: 5px;">我的等级</span>
                         </div>
                         <div class="weui-cell__ft"></div>
-                    </div>				
+                    </div>				 -->
                 </div>
             </div>
         </div>
