--- a/myindex.html
+++ b/myindex.html
@@ -17,9 +17,9 @@
             <div id="myindex_img">
                 <div><img src="img/user_img1.png"></div>
                 <div style="margin-top:10px;">
-                    <span style="display: inline-block;margin-left: 60px;">A杨洋洋1</span> 
-                    <span class="my_lv">LV0</span></div>
+                    <span>A杨洋洋1</span> 
             </div>
+            <div><span class="my_lv">LV0</span></div></div>
             <div class="weui-flex" id="my_placeholder">
                 <div class="weui-flex__item">
                     <div class="placeholder">
